# fun_fact_api

./: Cargo.toml
src/: main.rs
