[package]
name = "funfactapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
tokio = { version = "1.28.2", features = ["full"] }
anyhow = "1.0.71"
rand = "0.8.5"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"

